--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "thinkboard",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "install": "pnpm i --prefix backend && pnpm i --prefix frontend",
+    "install": "npm i --prefix backend && npm i --prefix frontend",
     "build": "npm run build --prefix frontend",
     "setup": "npm run install && npm run build",
     "start": "npm run start --prefix backend"
   },
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/hyooeewee/thinkboard.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.15.0"
+  "license": "ISC"
 }
